Fix for Table Title Overflow

--- a/src/app/shared/issue-tables/issue-tables.component.css
+++ b/src/app/shared/issue-tables/issue-tables.component.css
@@ -14,8 +14,15 @@
 }
 
 .mat-column-title {
-  width: 20%;
+  width: 30%;
   padding: 0 10px 0 10px;
+}
+
+td {
+  overflow: hidden;
+  width:auto;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .mat-column-type {
